rnsc/tests/snapshots/error-parser-outer_class_sub_directive-missing_operand.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that missing operand after .outer_class is detected and reported.
; Expected error: E-020 (missing implicit type hint operand)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class
.inner_classes_attr_end

.class_end
----- STDERR -----
[E-020] Error: missing class name after '.outer_class'
   ╭─[ test_data/rns_integration/error/parser/outer_class_sub_directive/missing_operand.rns:8:5 ]
   │
 8 │     .outer_class
   │     ──────┬─────│ 
   │           ╰─────── the '.outer_class' directive requires a outer class reference as operand
   │                 │ 
   │                 ╰─ but class name is missing
   │ 
   │ Help: Provide a outer class reference after the '.outer_class' directive, e.g.:
   │       .outer_class <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- JAVAP -----
not generated
